--- a/index.html
+++ b/index.html
@@ -1,169 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+  <title>HomePage</title>
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <style>
-    .main-img {
-      width: 80%;
-      max-width: 350px;
-      border-top-left-radius: 50%;
-      border-top-right-radius: 50%;
-      display: block;
-      margin: auto;
-    }
-
-    .small-img {
-      width: 15%;
-      max-width: 90px;
-      border-radius: 50%;
-      position: absolute;
-      border: 3px solid white;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .small-img-1 {
-      top: 2%;
-      left: 12%;
-    }
-
-    .small-img-2 {
-      bottom: 91%;
-      left: 23%;
-    }
-
-
-    .icon {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      background-color: #FFC107;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
-      top: -10%;
-      right: 54%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    @media (max-width: 768px) {
-      .small-img {
-        width: 18%;
-      }
-
-      .small-img-1 {
-        top: -13%;
-        left: 65%;
-      }
-
-      .small-img-2 {
-        bottom: 77%;
-        left: 77%;
-      }
-
-      .icon {
-        top: -12%;
-        right: 40%;
-      }
-
-      html {
-        scroll-behavior: smooth;
-        /* Enables smooth scrolling */
-      }
-
-      section {
-        height: 100vh;
-        /* Each section takes full viewport height */
-        padding: 50px;
-      }
-
-      .navbar-nav .nav-link {
-        cursor: pointer;
-      }
-
-
-    }
-    
-  </style>
+  
 </head>
-
 <body>
-
-
-  <!-- CREATING NAVBAR -->
-  <section id="home">
-    <nav class="navbar navbar-expand-lg bg-transparent text-light fixed-top shadow position-absolute top-0 start-0 w-100 z-3">
-
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#home">Explore Amritsar</a>
-
-
-        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto ">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#services">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#aboutus">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contactus">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="loginForm.html">Login</a>
-            </li>
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#amritsar_life" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Amritsar Life
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Food</a></li>
-                <li><a class="dropdown-item" href="#">Shopping</a></li>
-                <li><a class="dropdown-item" href="#">Culture & Festivals</a></li>
-                <li><a class="dropdown-item" href="#">Hidden Gems</a></li>
-              </ul>
-            </li>
-            <li class="nav-item"> -->
-              <!-- <a href="https://www.youtube.com/" target="_blank" class="nav-link text-danger fw-bold px-2">
-                🔴 Go
-              </a> -->
-            </li>
-          </ul>
-        </div>
-
-
+  <nav class="navbar navbar-expand-lg bg-transparent fixed-top" style="background-color: rgba(0, 0, 0, 0.5);">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Amritsar Sahib</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse D-flex justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="loginForm.html">Login</a>
+          </li>
+        </ul>
       </div>
-
-    </nav>
-  </section>
-  <!-- NAVBAR CREATED -->
-  <!-- CREATING CAROUSEL -->
+    </div>
+  </nav>
+  <!-- navbar ending -->
 
   <!-- starting wallpaper -->
   <div class="position-relative">
-    <img src="/img/newpic03.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit: cover;">
+    <img src="/img/newpic03.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit: fill;">
     <!-- Gradient Overlay -->
     <div class="position-absolute top-0 start-0 w-100 h-100"
-        style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7));"></div>
+        style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));"></div>
     <div class="carousel-caption d-none d-md-block text-start" style="bottom: 20px; left: 20px;">
         <h5 class="display-1 text-white" style="font-weight: bold; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
             Darbar Sahib</h5>
@@ -171,225 +51,5 @@
             Temple, Amritsar Sahib.</p>
     </div>
 </div>
-<!-- ending wallpaper
-  <div class="container position-absolute top-50 start-0 translate-middle-y px-4">
-    <div class="row">
-      <div class="col-md-6">
 
-        <h1 class="fw-bold text-white">
-          Explore <span class="text-warning">Amritsar</span> with us – <br>
-          Your journey, <br><span class="text-primary">our responsibility!</span>
-        </h1>
-
-      </div>
-    </div>
-  </div> -->
-
-
-  <section id="services">
-    <h1 class="text-center py-5">We Offer Best Services</h1>
-  </section>
-
-
-  <!-- CREATING CARD  -->
-  <div class="container py-3">
-    <a href="#guide">
-      <div class="row g-2 justify-content-center">
-        <div class="col-md-5 col-sm-6">
-          <div class="card p-1 text-center">
-            <img src="img/tour and toursm.jpg" class="card-img-top w-50 mx-auto mt-2" alt="Expert Local Guides">
-            <div class="card-body p-1">
-              <h6 class="fw-bold small">Expert Local Guides</h6>
-              <p class="small m-0">Get fascinating insights.</p>
-            </div>
-          </div>
-    </a>
-  </div>
-
-  <div class="col-md-5 col-sm-6">
-    <a href="#tour">
-      <div class="card p-1 text-center">
-        <img src="img/tour and toursm.jpg" class="card-img-top w-50 mx-auto mt-2" alt="Airport & Railway Transfers">
-        <div class="card-body p-1">
-          <h6 class="fw-bold small">Airport & Railway Transfers</h6>
-          <p class="small m-0">Hassle-free pickups.</p>
-        </div>
-      </div>
-    </a>
-  </div>
-
-  <div class="col-md-5 col-sm-6">
-    <a href="#photography" class="text-decoration-none">
-      <div class="card p-1 text-center">
-        <img src="img/tour and toursm.jpg" class="card-img-top w-50 mx-auto mt-2" alt="Guided Photo Tours">
-        <div class="card-body p-1">
-          <h6 class="fw-bold small">Guided Photo Tours</h6>
-          <p class="small m-0">Capture memories.</p>
-        </div>
-      </div>
-    </a>
-  </div>
-
-  <div class="col-md-5 col-sm-6">
-    <a href="#booking">
-      <div class="card p-1 text-center">
-        <img src="img/tour and toursm.jpg" class="card-img-top w-50 mx-auto mt-2" alt="Book Yourself">
-        <div class="card-body p-1">
-          <h6 class="fw-bold small">Book Yourself</h6>
-          <p class="small m-0">Easy booking.</p>
-        </div>
-      </div>
-  </div>
-  </div>
-  </a>
-  </div>
-
-
-
-  <!-- CARD CREATED -->
-  <!-- photography -->
-  <div class="container py-5 pt-5 mt-5">
-    <div class="row align-items-center">
-      <div class="col-md-6 position-relative text-center">
-        <!-- Main Image -->
-        <img src="img/selfie.webp" class="main-img img-fluid" alt="Golden Temple">
-
-        <!-- Small Overlapping Images -->
-        <img src="img/selfie3.jpg" class="small-img small-img-1" alt="Small Image 1">
-        <img src="img/selfie2.webp" class="small-img small-img-2" alt="Small Image 2">
-
-        <!-- Small Icon -->
-        <div class="icon">
-          <img src="img/ic.jpg" alt="Icon" style="width: 30px;">
-        </div>
-      </div>
-
-      <div class="col-md-6 text-center text-md-start">
-        <section id="photography">
-          <p class="text-uppercase fw-bold text-warning">Golden Specials</p>
-
-          <h1 class="fw-bold">Golden Memories in the Golden City!</h1>
-          <p class="text-muted">
-            Freeze your Amritsar memories with stunning photographs! From the Golden Temple’s serenity to the vibrant
-            streets and cultural wonders, let every shot tell your story.
-          </p>
-        </section>
-        <button class="btn btn-danger px-4">View Packages</button>
-      </div>
-    </div>
-  </div>
-  <!-- photography -->
-  <!--  transport-->
-  <div class="container py-5 pt-5 mt-5">
-    <div class="row align-items-center">
-      <!-- Text Content on the Left -->
-      <div class="col-md-6 text-center text-md-start">
-        <section id="tour">
-          <p class="text-uppercase fw-bold text-warning">Golden Specials</p>
-          <h1 class="fw-bold">Experience Amritsar, One Moment at a Time!</h1>
-          <p class="text-muted">
-            Freeze your Amritsar memories with stunning photographs! From the Golden Temple’s serenity to the vibrant
-            streets and cultural wonders, let every shot tell your story.
-          </p>
-        </section>
-        <button class="btn btn-danger px-4">View Packages</button>
-      </div>
-
-      <!-- Image on the Right -->
-      <div class="col-md-6 text-center">
-        <img src="img/transport.jpg" class="img-fluid" alt="Golden Temple" style="max-width: 100%; max-width: 60%;;">
-      </div>
-    </div>
-  </div>
-
-  <!-- transport -->
-
-  <div class="container py-5 pt-5 mt-5">
-    <div class="row align-items-center">
-      <!-- Image on the Left -->
-      <div class="col-md-6 text-center">
-        <img src="img/transport.jpg" class="img-fluid" alt="Golden Temple" style="max-width: 60%;">
-      </div>
-
-      <!-- Text Content on the Right -->
-      <div class="col-md-6 position-relative text-center text-md-start">
-        <section id="booking">
-          <p class="text-uppercase fw-bold text-warning">Golden Specials</p>
-          <h1 class="fw-bold">BOokinggg</h1>
-          <p class="text-muted">
-            Freeze your Amritsar memories with stunning photographs! From the Golden Temple’s serenity to the vibrant
-            streets and cultural wonders, let every shot tell your story.
-          </p>
-        </section>
-        <button class="btn btn-danger px-4">View Packages</button>
-      </div>
-    </div>
-  </div>
-  <!-- booking -->
-  <!-- guide -->
-
-  <div class="container py-5 pt-5 mt-5">
-    <div class="row align-items-center">
-      <!-- Text Content on the Left -->
-      <div class="col-md-6 text-center text-md-start">
-        <section id="guide">
-          <p class="text-uppercase fw-bold text-warning">Golden Specials</p>
-          <h1 class="fw-bold">guide section</h1>
-          <p class="text-muted">
-            Freeze your Amritsar memories with stunning photographs! From the Golden Temple’s serenity to the vibrant
-            streets and cultural wonders, let every shot tell your story.
-          </p>
-        </section>
-        <button class="btn btn-danger px-4">View Packages</button>
-      </div>
-
-      <!-- Image on the Right -->
-      <div class="col-md-6 text-center">
-        <img src="img/transport.jpg" class="img-fluid" alt="Golden Temple" style="max-width: 100%; max-width: 60%;;">
-      </div>
-    </div>
-  </div>
-
-  <!-- guide -->
-  <div class="container py-5">
-    <div class="row align-items-center">
-      <!-- Image on the Left -->
-      <div class="col-md-6">
-        <img src="img/amritsar.jpg" class="img-fluid rounded shadow mx-auto " alt="Golden Temple">
-      </div>
-
-      <!-- Text Content on the Right -->
-      <div class="col-md-6">
-        <section id="aboutus">
-          <h2 class="fw-bold text-primary">About Amritsar – The Golden City</h2>
-          <p class="text-muted">
-            Amritsar, the heart of Punjab, is a city rich in history, spirituality, and vibrant culture. Home to the
-            <strong>Golden Temple</strong>, it welcomes millions seeking peace and divine blessings.
-          </p>
-        </section>
-        <ul class="list-unstyled">
-          <li>✅ <strong>Golden Temple</strong> – The spiritual heart of Sikhism</li>
-          <li>✅ <strong>Jallianwala Bagh</strong> – A historical landmark of sacrifice</li>
-          <li>✅ <strong>Wagah Border Ceremony</strong> – A patriotic spectacle</li>
-          <li>✅ <strong>Amritsari Food</strong> – Enjoy Kulcha, Lassi & Chole Bhature</li>
-          <li>✅ <strong>Colorful Bazaars</strong> – Explore Phulkari, Juttis & more</li>
-        </ul>
-        <button class="btn btn-danger mt-3">Learn More</button>
-      </div>
-    </div>
-    <div class="row mt-5">
-      <div class="col-12">
-        <h3 class="text-center text-primary">Explore Amritsar on Map</h3>
-        <div class="ratio ratio-16x9">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d448181.0611561977!2d74.87226449090692!3d31.633979249757246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391964aa536a26e7%3A0xc66e654aad4a3817!2sAmritsar%2C%20Punjab!5e0!3m2!1sen!2sin!4v1710964576573!5m2!1sen!2sin"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-          </iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</body>
-
-</html>
+  </html>
