--- a/registerForm.html
+++ b/registerForm.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>registerForm</title>
-    <link rel="stylesheet" href="css/loginForm.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>registerForm</title>
+        <link rel="stylesheet" href="css/form.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body background="img/card01.jpg">
     <div class="container">
         <div class="left">
-            <!-- <img src="/img/pic03.jpg" alt=""> -->
-            <p id="heading">Welcome to<br>Amritsar Sahib.</p>
+            <img src="/img/pic03.jpg" alt="">
+            <div class="overlay-text">
+                Connect to<br>Amritsar Sahib.
+            </div>
         </div>
         <div class="right">
-            <form>
-                <h1>Create a new account</h1>
-                <input id="inputField" type="text" name="username" placeholder="enter name" required><br><br>
-                <input id="inputField" type="text" name="userid" placeholder="enter id" required><br><br>
-                <input id="inputField" type="password" name="password" placeholder="enter password" required><br><br>
-                <input id="inputField" type="password" name="repassword" placeholder="re-enter password" required><br><br>
-                <button id="button" type="submit">Login</button>
-                <p>Already have an account? <a href="loginForm.html">Login</a></p>
-            </form>
+<form>
+    <h1>Create account</h1>
+
+    <!-- Name Field with Icon -->
+    <div class="input-container">
+        <i class="fa fa-user icon"></i>
+        <input type="text" name="username" placeholder="Enter Name" required>
+    </div>
+<br>
+    <!-- User ID Field with Icon -->
+    <div class="input-container">
+        <i class="fa fa-id-card icon"></i>
+        <input type="text" name="userid" placeholder="Enter ID" required>
+    </div>
+<br>
+    <!-- Password Field with Icon -->
+    <div class="input-container">
+        <i class="fa fa-lock icon"></i>
+        <input type="password" name="password" placeholder="Enter Password" required>
+    </div>
+<br>
+    <!-- Re-enter Password Field with Icon -->
+    <div class="input-container">
+        <i class="fa fa-lock icon"></i>
+        <input type="password" name="repassword" placeholder="Re-enter Password" required>
+    </div>
+
+    <button id="button" type="submit">Sign Up</button>
+
+    <p id="bottomText">Already have an account? <a href="loginForm.html">Login</a></p>
+</form>
+
         </div>
     </div>
 </body>
