--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HomePage</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/styles.css">
+  
+<link rel="stylesheet" href="css/styles.css">
+
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -45,7 +47,7 @@
 
   <!-- starting wallpaper -->
   <div class="position-relative">
-    <img src="/img/newpic03.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit: fill;">
+    <img src="img/pic03.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit: fill;">
     <!-- Gradient Overlay -->
     <div class="position-absolute top-0 start-0 w-100 h-100"
       style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));"></div>
@@ -65,6 +67,7 @@
     <div class="heading-text" id="services">Our Services</div>
     <div class="services">
       <div class="services-one">
+        <img src="img/transport.jpg" alt="transport" style="width: 100px;  object-fit: contain;">
         <h1>Service 1</h1>
       </div>
       <div class="services-one">
@@ -86,23 +89,22 @@
 
     <div class="about-content">
       <div class="about-left">
-        <img src="img/pic01.jpg" alt="">
+        <img src="img/pic01.jpg" alt="Golden Temple">
       </div>
       <div class="about-right">
-        <p>Amritsar Sahib, founded in 1577 by Guru Ram Das, is a historic city in Punjab, India, known for its spiritual
-          and cultural significance. It is home to the Golden Temple, the holiest Sikh shrine, built by Guru Arjan Dev
-          and surrounded by the sacred Amrit Sarovar.</p>
-
-        <p>The city witnessed the tragic Jallianwala Bagh massacre in 1919 and is also famous for the Wagah Border
-          ceremony. Amritsar’s vibrant Punjabi culture is reflected in its delicious cuisine, including Amritsari kulcha
-          and lassi.</p>
-
-        <p>An economic hub, Amritsar thrives in textiles, carpets, and handicrafts. Well-connected by road, rail, and
-          air, it attracts millions of visitors annually. With its deep-rooted history, religious significance, and
-          lively culture, Amritsar Sahib remains a symbol of Sikh heritage and Indian patriotism.</p>
+        <div class="blur-text">
+          <p>Amritsar Sahib, founded in 1577 by Guru Ram Das, is a historic city in Punjab, India, known for its spiritual
+            and cultural significance. It is home to the Golden Temple, the holiest Sikh shrine, built by Guru Arjan Dev and
+            surrounded by the sacred Amrit Sarovar.</p>
+          <p>The city witnessed the tragic Jallianwala Bagh massacre in 1919 and is also famous for the Wagah Border
+            ceremony...</p>
+        </div>
+        <a href="about.html">
+          <button class="read-more-btn">Read More</button>
+        </a>
       </div>
     </div>
-    <!-- about section ending -->
+    
 
     <!-- map section start -->
      <br><br>
