--- a/loginForm.html
+++ b/loginForm.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="css/form.css">
+    <!-- For index.html -->
+<link rel="stylesheet" href="css/form.css">
+
     <link rel="stylesheet" href=
     "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -13,7 +15,7 @@
 <body background="img/card01.jpg">
     <div class="container">
         <div class="left">
-            <img src="/img/pic03.jpg" alt="">
+            <img src="img/pic03.jpg" alt="">
             <div class="overlay-text">
                 Welcome to<br>Amritsar Sahib.
             </div>
