--- a/registerForm.html
+++ b/registerForm.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body background="img/card01.jpg">
+<body>
     <div class="container">
         <div class="left">
-            <img src="/img/pic03.jpg" alt="">
+            <img src="img/pic03.jpg" alt="">
             <div class="overlay-text">
                 Connect to<br>Amritsar Sahib.
             </div>
