--- a/about.html
+++ b/about.html
@@ -14,30 +14,45 @@
 
     <!-- Timeline Navigation -->
     <div class="timeline-buttons">
-      <button class="tab-button active" data-target="origin">🕉 Origin</button>
+      <button class="tab-button active" data-target="origin">ੴ Origin</button>
       <button class="tab-button" data-target="british">🇬🇧 British Era</button>
       <button class="tab-button" data-target="modern">🏙 Modern Day</button>
     </div>
 
     <!-- Dynamic Sections -->
     <div class="history-section active" id="origin">
-      <img src="img/guru ram dass imag.jpg" alt="Guru Ram Das" class="section-img">
-      <h2 class="section-title">The Origin of Amritsar</h2>
-
-      <p>Amritsar was founded in 1577 by Guru Ram Das, the fourth Sikh Guru. Centered around the sacred Amrit Sarovar, the city soon became the spiritual nucleus of Sikhism. Guru Arjan Dev began the construction of Harmandir Sahib (Golden Temple), a symbol of equality and peace.</p>
+      <figure class="section-figure">
+        <img src="img/guru ram dass imag.jpg" alt="Guru Ram Das" class="section-img">
+        <figcaption class="section-caption">Guru Ram Das, founder of Amritsar</figcaption>
+      </figure>
+      <div class="section-text">
+        <h2 class="section-title">The Origin of Amritsar</h2>
+        <p>Guru Ram Das, the fourth Sikh Guru, was born as Bhai Jetha on 24 September 1534 in Lahore (now in Pakistan). Orphaned at a young age, he was raised by a kind woman who instilled in him the values of hard work and faith. As a young man, he met Guru Amar Das, the third Sikh Guru, and became his devoted disciple. He later married Bibi Bhani, the daughter of Guru Amar Das, and became an integral part of the Guru’s family. Impressed by his humility, devotion, and dedication to service, Guru Amar Das appointed him as his successor in 1574, giving him the name Guru Ram Das.
+ As Guru, he made significant contributions to Sikhism and laid the foundation for what would become the spiritual and cultural heart of the Sikh community. He selected the site for a new settlement and began constructing a sacred tank called Amrit Sarovar, or “Pool of Nectar.” Around this tank grew a town that would eventually become the city of Amritsar. Guru Ram Das encouraged people from various walks of life to settle there, fostering a diverse and thriving community. He also composed numerous hymns that are now part of the Guru Granth Sahib and introduced the Lavan, the four hymns recited during the Sikh marriage ceremony. He institutionalized the practice of Langar (community kitchen) and emphasized service, equality, and devotion. Guru Ram Das passed away on 1 September 1581 and was succeeded by his youngest son, Guru Arjan Dev. His legacy lives on, especially through the city of Amritsar, which stands as a testament to his vision and spiritual leadership.</p>
+      </div>
     </div>
 
     <div class="history-section" id="british">
-      <img src="img/jalha wala img.jpg" alt="Jallianwala Bagh" class="section-img">
-      <h2 class="section-title">British Colonial Period</h2>
-
-      <p>During British rule, Amritsar was a hub of resistance. The Jallianwala Bagh massacre in 1919 shook the nation and intensified the freedom movement. This dark chapter marks Amritsar’s deep involvement in India’s independence journey.</p>
+      <figure class="section-figure">
+        <img src="img/jalha wala bagh.jpg" alt="Jallianwala Bagh" class="section-img">
+        <figcaption class="section-caption">Jallianwala Bagh memorial</figcaption>
+      </figure>
+      <div class="section-text">
+        <h2 class="section-title">British Colonial Period</h2>
+        <p>During British rule, Amritsar was a hub of resistance. The Jallianwala Bagh massacre in 1919 shook the nation and intensified the freedom movement.</p>
+        <p>This dark chapter marks Amritsar’s deep involvement in India’s independence journey.</p>
+      </div>
     </div>
 
     <div class="history-section" id="modern">
-      <img src="img/amritsar22.jpg" alt="Modern Amritsar" class="section-img">
-      <h2 class="section-title">Modern Amritsar</h2>
-      <p>Today, Amritsar is a global spiritual destination. It thrives with tourism, trade, and culture — from the Golden Temple to street food, from textile exports to cross-border diplomacy at Wagah. A perfect blend of history and progress.</p>
+      <figure class="section-figure">
+        <img src="img/amritsar1.webp" alt="Modern Amritsar" class="section-img">
+        <figcaption class="section-caption">Modern-day Amritsar</figcaption>
+      </figure>
+      <div class="section-text">
+        <h2 class="section-title">Modern Amritsar</h2>
+        <p>Today, Amritsar is a global spiritual destination. It thrives with tourism, trade, and culture — from the Golden Temple to street food, from textile exports to cross-border diplomacy at Wagah.</p>
+      </div>
     </div>
   </section>
   <script>
