--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Sarai</a>
+            <a class="nav-link " href="accomodation.html">Sarai</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#services">Services</a>
